[gd_scene load_steps=4 format=3 uid="uid://cuip7lqictm7d"]

[ext_resource type="PackedScene" uid="uid://ce32tl5muds5l" path="res://scenes/cell.tscn" id="1_ob8aq"]
[ext_resource type="Texture2D" uid="uid://byx5fhkggvnip" path="res://art/slimes/slime.png" id="2_ul7ox"]
[ext_resource type="Script" path="res://scenes/basic_slime.gd" id="3_7b11j"]

[node name="BasicSlime" instance=ExtResource("1_ob8aq")]
modulate = Color(1, 0.243137, 0.427451, 1)
texture = ExtResource("2_ul7ox")
flip_v = true
script = ExtResource("3_7b11j")
cooldown = 2

[node name="Timer" type="Timer" parent="." index="0"]
one_shot = true

[connection signal="ready" from="Timer" to="." method="_on_timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
